WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48772
Fixing a bad assert in paintPaginatedChildLayer, hitTestPaginatedChildLayer
https://bugs.webkit.org/show_bug.cgi?id=48772
Summary
Fixing a bad assert in paintPaginatedChildLayer, hitTestPaginatedChildLayer
Abhishek Arya
Reported
2010-11-01 11:47:54 PDT
Fixing a bad assert in paintPaginatedChildLayer, hitTestPaginatedChildLayer by using the childLayer's renderer instead of this's->renderer
Attachments
Patch
(4.26 KB, patch)
2010-11-01 12:31 PDT
,
Abhishek Arya
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Abhishek Arya
Comment 1
2010-11-01 12:24:41 PDT
Removing the assert altogether. auto z-index case will hit it.
Abhishek Arya
Comment 2
2010-11-01 12:31:07 PDT
Created
attachment 72541
[details]
Patch
Eric Seidel (no email)
Comment 3
2010-12-10 22:18:22 PST
@hyatt: ping?
Eric Seidel (no email)
Comment 4
2010-12-24 17:03:03 PST
The assert definitely looks bogus. But maybe Hyatt intended columns to be ignored when boxes were positioned or something?
Abhishek Arya
Comment 5
2010-12-24 18:17:00 PST
(In reply to
comment #4
)
> The assert definitely looks bogus. But maybe Hyatt intended columns to be ignored when boxes were positioned or something?
Dave had said ok on this to remove the assert on irc some time back. I forgot to follow up with him to gave a r+.
Abhishek Arya
Comment 6
2010-12-26 08:05:13 PST
Comment on
attachment 72541
[details]
Patch Clearing flags on attachment: 72541 Committed
r74666
: <
http://trac.webkit.org/changeset/74666
>
Abhishek Arya
Comment 7
2010-12-26 08:05:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug