2010-12-26  Abhishek Arya  <inferno@chromium.org>

Reviewed by Simon Fraser.

        Remove the bad assert in paintPaginatedChildLayer, hitTestPaginatedChildLayer. 
        https://bugs.webkit.org/show_bug.cgi?id=48772

        Test: fast/multicol/renderer-positioned-assert-crash.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::paintPaginatedChildLayer):
        (WebCore::RenderLayer::hitTestPaginatedChildLayer):
2010-12-26  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Simon Fraser.

        Tests passes if it does not crash.
        https://bugs.webkit.org/show_bug.cgi?id=48772

        * fast/multicol/renderer-positioned-assert-crash-expected.txt: Added.
        * fast/multicol/renderer-positioned-assert-crash.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@74666 bbb929c8-8fbe-4397-9dbb-9b2b20218538