third_party/WebKit/WebCore/rendering/RenderLayer.cpp
@@ -2573,12 +2573,11 @@ void RenderLayer::paintList(Vector<RenderLayer*>* list, RenderLayer* rootLayer, 
 }
 
 void RenderLayer::paintPaginatedChildLayer(RenderLayer* childLayer, RenderLayer* rootLayer, GraphicsContext* context,
-                                             const IntRect& paintDirtyRect, PaintBehavior paintBehavior,
-                                             RenderObject* paintingRoot, OverlapTestRequestMap* overlapTestRequests,
-                                             PaintLayerFlags paintFlags)
+                                           const IntRect& paintDirtyRect, PaintBehavior paintBehavior,
+                                           RenderObject* paintingRoot, OverlapTestRequestMap* overlapTestRequests,
+                                           PaintLayerFlags paintFlags)
 {
     // We need to do multiple passes, breaking up our child layer into strips.
-    ASSERT(!renderer()->isPositioned());
     Vector<RenderLayer*> columnLayers;
     RenderLayer* ancestorLayer = isNormalFlowOnly() ? parent() : stackingContext();
     for (RenderLayer* curr = childLayer->parent(); curr; curr = curr->parent()) {
@@ -3045,7 +3044,6 @@ RenderLayer* RenderLayer::hitTestList(Vector<RenderLayer*>* list, RenderLayer* r
 RenderLayer* RenderLayer::hitTestPaginatedChildLayer(RenderLayer* childLayer, RenderLayer* rootLayer, const HitTestRequest& request, HitTestResult& result,
                                                      const IntRect& hitTestRect, const IntPoint& hitTestPoint, const HitTestingTransformState* transformState, double* zOffset)
 {
-    ASSERT(!renderer()->isPositioned());
     Vector<RenderLayer*> columnLayers;
     RenderLayer* ancestorLayer = isNormalFlowOnly() ? parent() : stackingContext();
     for (RenderLayer* curr = childLayer->parent(); curr; curr = curr->parent()) {
